# demo-python-rotation-logger

./: README.md  log.ini  main.py  pyproject.toml
